--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,12 @@
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
+                            <h3>Show an email field (allows only one email address):</h3>
+                            <form action="/action_page.php">
+  <label for="email">Enter your email:</label>
+  <input type="email" id="email" name="email">
+  <input type="submit">
+</form>
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
