--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -663,6 +663,61 @@ footer {
 
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+ input {display: block;
+    width: 100%;
+    height: 36px;
+    padding: 6px 14px;
+    font-size: 14px;
+    line-height: 1.57142857;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #cfd3cc;
+    border-radius: 2px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    margin: 0;
+    }
+    
+    .btn {
+    display: block;
+    padding: 6px 14px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.57142857;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    background-clip: padding-box;
+    border: 1px solid transparent;
+    border-radius: 2px;
+      background:red;
+      color: #fff;
+}
+
+.pull-right {
+  float:right;
+}
+
+.s-margin-left {
+    margin-left: 10px;
+}
+
 @media only screen and (max-width: 992px) {
 	
 	.footerText {
