--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,12 @@
   <input type="email" id="email" name="email">
   <input type="submit">
 </form>
+                                <div class="form-group">
+  <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">send</button>
+  <div style="overflow: hidden;">
+      <input type="email" class="form-control" placeholder="Enter E-mail" value="" id="email" name="email">
+  </div>
+</div>
                             {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
