--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="downloadButtonsContainer">
                         <div class="form-group">
-  <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">send</button>
+  <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
   <div style="overflow: hidden;">
       <input type="email" class="form-control" placeholder="Enter E-mail" value="" id="email" name="email">
   </div>
