--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -671,9 +671,9 @@ footer {
 
  input {display: block;
     width: 100%;
-    height: 36px;
+    height: 45px;
     padding: 6px 14px;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 1.57142857;
     color: #555;
     background-color: #fff;
@@ -706,8 +706,8 @@ footer {
     background-clip: padding-box;
     border: 1px solid transparent;
     border-radius: 2px;
-      background:red;
-      color: #fff;
+      background:black;
+      color: #000000;
 }
 
 .pull-right {
