--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,15 +52,15 @@
                         </div>
                         <div class="downloadButtonsContainer">
                         <div class="form-group">
-  <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
-  <div style="overflow: hidden;">
-      <input type="email" class="form-control" placeholder="Enter E-mail" value="" id="email" name="email">
-  </div>
-</div>
-                            {% if site.playstore_link %}
+                            <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
+                            <div style="overflow: hidden;">
+                                <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
+                                </div>
+</                             div>
+                            <!-- {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
-                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a>
+                            <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a> -->
                         </div>
                     </div>
                     {% include features.html %}
