--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -670,8 +670,8 @@ footer {
 }
 
  input {display: block;
-    width: 100%;
-    height: 45px;
+    width: 150%;
+    height: 36px;
     padding: 6px 14px;
     font-size: 18px;
     line-height: 1.57142857;
@@ -707,7 +707,7 @@ footer {
     border: 1px solid transparent;
     border-radius: 2px;
       background:black;
-      color: #000000;
+      color: white;
 }
 
 .pull-right {
