--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -670,8 +670,8 @@ footer {
 }
 
  input {display: block;
-    width: 150%;
-    height: 36px;
+    width: 250px;
+    height: 40px;
     padding: 6px 14px;
     font-size: 18px;
     line-height: 1.57142857;
@@ -689,7 +689,7 @@ footer {
     
     .btn {
     display: block;
-    padding: 6px 14px;
+    padding: 6px 50px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: normal;
