--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
-                        <div class="form-group">
+                        <form id="fcf-form-id" class="fcf-form-class" method="post" action="todaysread.php">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
                             <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
