--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
+                            <form action="https://formspree.io/f/xoqrwzlr" method="POST">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
                             <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
@@ -61,6 +62,7 @@
                             {% endif %}
                             <a class="appStoreLink" href="{{site.appstore_link}}"><img class="appStore" src="assets/appstore.png"></a> -->
                         </div>
+                        </form>
                     </div>
                     {% include features.html %}
                     {% include footer.html %}
