--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="downloadButtonsContainer">
                             <form action="https://formspree.io/f/xoqrwzlr" method="POST">
-                            <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">SUBMIT</button>
+                            <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">Submit</button>
                             <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
                                 </div>
