--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,24 @@
                         <div class="downloadButtonsContainer">
                             <form action="https://formspree.io/f/xoqrwzlr" method="POST">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">Submit</button>
+                                <script type="text/javascript">
+    function stoppedTyping(){
+        if(this.value.length > 0) { 
+            document.getElementById('submit').disabled = false; 
+        } else { 
+            document.getElementById('submit').disabled = true;
+        }
+    }
+    function verify(){
+        if myText is empty{
+            alert "Put some text in there!"
+            return
+        }
+        else{
+            do button functionality
+        }
+    }
+</script>
                             <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
                                 </div>
