--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -670,7 +670,7 @@ footer {
 }
 
  input {display: block;
-    width: 400px;
+    width: 200%;
     height: 75px;
     padding: 6px 14px;
     font-size: 20px;
