--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -670,7 +670,7 @@ footer {
 }
 
  input {display: block;
-    width: 200%;
+    width: 250%;
     height: 75px;
     padding: 6px 14px;
     font-size: 20px;
@@ -690,6 +690,7 @@ footer {
     
     .btn {
     display: block;
+	    width: 100%
     padding: 21px 35px;
     margin-bottom: 0;
     font-size: 20px;
