--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,20 +52,32 @@
                         </div>
                         <div class="downloadButtonsContainer">
                             <form action="https://formspree.io/f/xoqrwzlr" method="POST">
-                            <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit">Submit</button>
-                           <div>
-    <input type="button" onclick="clearFields()" value="Clear">
-</div>
+                            <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit" onclick="clearFields()" id="button1">Submit</button>
+
                                                             <div style="overflow: hidden;">
-                                <input type="email" class="form-control" placeholder="Enter email" value="" id="email" name="email">
+                                <input type="email" class="form-control" placeholder="Enter email" value="" id="email1" name="email" onkeyup="stoppedTyping()">
 
 
-<script type="text/javascript">
-function clearFields() {
-    document.getElementById("textfield1").value=""
-    document.getElementById("textfield2").value=""
-}
-</script>
+                        <script type="text/javascript">
+                        function clearFields() {
+                            document.getElementById("email1").value=""
+                            
+                            if email is empty{
+                                alert "Put some text in there!"
+                            return
+                            }
+                            else{
+                                <!-- do button functionality -->
+                            }
+                        }
+                        function stoppedTyping(){
+                            if(this.value.length > 0) { 
+                                document.getElementById('button1').disabled = false; 
+                            } else { 
+                                document.getElementById('button1').disabled = true;
+                            }
+                        }
+                        </script>
 
                                 </div>
 </                             div>
