--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
                         function clearFields() {
                             document.getElementById("email1").value=""
                             
-                            if email is empty{
+                            if email1 is empty{
                                 alert "Put some text in there!"
                             return
                             }
@@ -72,9 +72,9 @@
                         }
                         function stoppedTyping(){
                             if(this.value.length > 0) { 
-                                document.getElementById('button1').disabled = false; 
+                                document.getElementById("button1").disabled = false; 
                             } else { 
-                                document.getElementById('button1').disabled = true;
+                                document.getElementById("button1").disabled = true;
                             }
                         }
                         </script>
