--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,8 @@
                         function clearFields() {
                             document.getElementById("email1").value=""
                             
-                            if email1 is empty{
-                                alert "Please enter your email address!"
+                            if (email1.elements.length == 0){
+                                alert ("Please enter an email address")
                             return
                             }
                             else{
