--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
                         <div class="downloadButtonsContainer">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit" onclick="clearFields()" id="button1">Submit</button>
 
-                                                            <div style="overflow: auto;">
+                                 <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email1" name="email" onkeyup="stoppedTyping()">
 
 
@@ -71,9 +71,9 @@
                         }
                         function stoppedTyping(){
                             if(this.value.length > 0) { 
-                                document.getElementById("button1").disabled = false; 
-                            } else { 
-                                document.getElementById("button1").disabled = true;
+                                document.getElementById('button1').disabled = false; 
+                            } else {
+                                document.getElementById('button1").disabled = true;
                             }
                         }
                         </script>
