--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -670,7 +670,7 @@ footer {
 }
 
  input {display: block;
-    width: 400px;
+    width: 100%;
     height: 75px;
     padding: 6px 14px;
     font-size: 20px;
@@ -693,6 +693,8 @@ footer {
     padding: 21px 35px;
     margin-bottom: 0;
     font-size: 20px;
+	height: 75px;
+	    width:40px;
     font-weight: normal;
     line-height: 1.57142857;
     text-align: center;
