--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -690,11 +690,11 @@ footer {
     
     .btn {
     display: block;
-    padding: 21px 35px;
+    padding: 6px 14px;
     margin-bottom: 0;
     font-size: 20px;
 	height: 75px;
-	    width:80px;
+	    width:10%;
     font-weight: normal;
     line-height: 1.57142857;
     text-align: center;
