--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,37 +51,15 @@
                             </p>
                         </div>
                         <div class="downloadButtonsContainer">
-                            
-                                                    <script type="text/javascript">
-                        function clearFields() {
-                            document.getElementById("email1").value=""
-                            
-                            if (email1.value.length == 0){
-                                alert ("Please enter an email address")
-                            return
-                            }
-                            else{
-                            <form action="https://formspree.io/f/xoqrwzlr" method="POST"> </form>
-                            }
-                        }
-                        function stoppedTyping(){
-                            if(this.value.length > 0) { 
-                                document.getElementById('button1').disabled = false; 
-                            } else {
-                                document.getElementById('button1").disabled = true;
-                            }
-                        }
-                        </script>
+
+                            <form action="https://formspree.io/f/xoqrwzlr" method="POST">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit" onclick="clearFields()" id="button1">Submit</button>
 
                                  <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email1" name="email" onkeyup="stoppedTyping()">
-
-
-
-
                                 </div>
-</                             div>
+                            </div>
+                            </form>
                             <!-- {% if site.playstore_link %}
                                 <a class="playStoreLink" href="{{site.playstore_link}}"><img class="playStore" src="assets/playstore.png"></a>
                             {% endif %}
