--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -336,6 +336,7 @@ nav > ul li a:active {
 .downloadButtonsContainer {
 	display: inline-block;
 	margin-top: 42px;
+	width: 60%;
 	filter: $drop-shadow;
 }
 
