--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html lang="en-us">
 
 {% include head.html %}
+    <meta property="og:title" content="Today's Read" />
+
+    <meta property="og:image" content="assets/today'sreadlogo.png" />
+
 
 <body>
     <div class="imageWrapper">
