--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,12 +56,12 @@
                         </div>
                         <div class="downloadButtonsContainer">
 
-                            <form action="https://formspree.io/f/xoqrwzlr" method="POST">
+                           <-- <form action="https://formspree.io/f/xoqrwzlr" method="POST">
                             <button class="pull-right btn btn-lg btn-primary s-margin-bottom s-margin-left" type="submit" onclick="clearFields()" id="button1">Submit</button>
 
                                  <div style="overflow: hidden;">
                                 <input type="email" class="form-control" placeholder="Enter email" value="" id="email1" name="email" onkeyup="stoppedTyping()">
-                                </div>
+                                </div> --!>
                             </div>
                             </form>
                             {% if site.playstore_link %}
